Add CheckSolanaAddress API method
